fix : space API 수정 (#179) (#180)
* fix: redis key값 수정 (#170)

* feat : 연관관계 수정 및 Loaction 엔티티 추가

* feat : location구현

* feat : redis

* feat : location 구현

* fix: redis key값 수정

* feat : 관리자 가입 시 테스트유저 삽입 구현 (#171)

* fix: redis key값 수정 (#170)

* feat : 연관관계 수정 및 Loaction 엔티티 추가

* feat : location구현

* feat : redis

* feat : location 구현

* fix: redis key값 수정

* feat : 관리자 가입 시 테스트유저 삽입 구현

---------



* fix: redis time 수정 (#174)

* feat : 연관관계 수정 및 Loaction 엔티티 추가

* feat : location구현

* feat : redis

* feat : location 구현

* fix: redis key값 수정

* fix: redis time 1분 수정

* fix : 테스트유저 이메일 수정

* fix: locationId 수정 (#176)

* feat : 연관관계 수정 및 Loaction 엔티티 추가

* feat : location구현

* feat : redis

* feat : location 구현

* fix: redis key값 수정

* fix: redis time 1분 수정

* fix: locationId수정

* fix: "locationId 수정" (#177)

* feat : 연관관계 수정 및 Loaction 엔티티 추가

* feat : location구현

* feat : redis

* feat : location 구현

* fix: redis key값 수정

* fix: redis time 1분 수정

* fix: locationId수정

* fix: locationId수정

* fix: "redis주석" (#178)

* feat : 연관관계 수정 및 Loaction 엔티티 추가

* feat : location구현

* feat : redis

* feat : location 구현

* fix: redis key값 수정

* fix: redis time 1분 수정

* fix: locationId수정

* fix: locationId수정

* fix: redis주석처리

* build : actuator build.gradle 추가

* fix : space 도메인 API 수정

---------

Co-authored-by: sangggyu <124053404+sangggyu@users.noreply.github.com>